--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,4 +34,4 @@ micronaut:
                 signatures:
                     secret:
                         generator:
-                            secret: pleaseChangeThisSecretForANewOne
+                            secret: myultrasecret
