--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation ("commons-logging:commons-logging:1.2") {
         force = true
     }
+    implementation 'com.itextpdf:itext7-core:7.1.5'
     implementation  "io.micronaut:micronaut-security-jwt"
     implementation "org.springframework.security:spring-security-crypto:4.2.5.RELEASE"
 
@@ -54,7 +55,6 @@ dependencies {
     testCompile "io.micronaut:micronaut-spring"
     testCompile "io.micronaut.configuration:micronaut-jdbc-dbcp"
     testCompile 'org.springframework:spring-jdbc:4.3.17.RELEASE'
-    testCompile 'org.postgresql:postgresql:42.2.5'
     testImplementation("org.spockframework:spock-core:1.3-groovy-2.5") {
         exclude group: "org.codehaus.groovy", module: "groovy-all"
     }
